--- a/src/application/Sample.fxml
+++ b/src/application/Sample.fxml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.*?>
+<?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-
-<BorderPane prefHeight="477.0" prefWidth="707.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="application.SampleController">
-	<!-- TODO Add Nodes -->
+<BorderPane prefHeight="548.0" prefWidth="1012.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SampleController">
+   <right>
+      <ScrollPane id="scrollGraphs" prefHeight="548.0" prefWidth="468.0" BorderPane.alignment="CENTER" />
+   </right>
 </BorderPane>
