--- a/bin/application/Sample.fxml
+++ b/bin/application/Sample.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-<TitledPane fx:id="TitledPanePrincipal" animated="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="714.0" prefWidth="1336.0" text="FrameWork" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<TitledPane fx:id="TitledPanePrincipal" animated="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="714.0" prefWidth="1336.0" text="FrameWork" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SampleController">
   <content>
     <AnchorPane fx:id="AnchoPanePrincipal" minHeight="0.0" minWidth="0.0">
          <children>
@@ -18,11 +18,11 @@
             <Button fx:id="ButtonExecutarModelo" layoutX="421.0" layoutY="636.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="130.0" text="Executar Modelo" />
             <Label layoutX="56.0" layoutY="6.0" text="Inserção de Variáveis" />
             <Label layoutX="21.0" layoutY="115.0" text="Variável:" />
-            <TextField fx:id="TextFieldVariavel" layoutX="74.0" layoutY="111.0" prefHeight="25.0" prefWidth="135.0" />
+            <TextField id="txtFieldUniversoNome" fx:id="txtFieldUniversoNome" layoutX="74.0" layoutY="111.0" prefHeight="25.0" prefWidth="135.0" />
             <Label layoutX="21.0" layoutY="78.0" text="Universo:    de" />
-            <TextField fx:id="TextFieldInicioUniverso" layoutX="100.0" layoutY="74.0" prefHeight="15.0" prefWidth="39.0" />
+            <TextField id="txtFieldUniversoStart" fx:id="txtFieldUniversoStart" layoutX="100.0" layoutY="74.0" prefHeight="15.0" prefWidth="39.0" />
             <Label layoutX="146.0" layoutY="78.0" text="até" />
-            <TextField fx:id="TextFieldFinalUniverso" layoutX="170.0" layoutY="74.0" prefHeight="25.0" prefWidth="39.0" />
+            <TextField id="txtFieldUniversoEnd" fx:id="txtFieldUniversoEnd" layoutX="170.0" layoutY="74.0" prefHeight="25.0" prefWidth="39.0" />
             <TreeView layoutX="10.0" layoutY="175.0" prefHeight="171.0" prefWidth="219.0" />
             <Label layoutX="82.0" layoutY="182.0" text="Inserir Termos" />
             <CheckBox fx:id="CheckBoxVariavelObjetivo" layoutX="75.0" layoutY="143.0" mnemonicParsing="false" text="Objetiva" />
@@ -39,7 +39,7 @@
             <TextField fx:id="TextFieldInicioNucleo" layoutX="90.0" layoutY="276.0" prefHeight="25.0" prefWidth="43.0" />
             <TextField fx:id="TextFieldFinalNucleo" layoutX="158.0" layoutY="276.0" prefHeight="25.0" prefWidth="43.0" />
             <Button fx:id="ButtonInserirTermo" layoutX="94.0" layoutY="312.0" mnemonicParsing="false" text="Inserir" />
-            <Button layoutX="115.0" layoutY="357.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="111.0" text="Inserir Variável" />
+            <Button layoutX="115.0" layoutY="357.0" mnemonicParsing="false" onAction="#inserirVariavel" prefHeight="25.0" prefWidth="111.0" text="Inserir Variável" />
             <TitledPane fx:id="TitledPaneGrafico" alignment="CENTER" animated="false" collapsible="false" layoutX="568.0" layoutY="8.0" prefHeight="670.0" prefWidth="760.0" text="Gráficos" textAlignment="CENTER">
               <content>
                 <AnchorPane fx:id="AnchorPaneGrafico" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
@@ -88,6 +88,11 @@
                   </AnchorPane>
               </content>
             </TitledPane>
+            <TableView fx:id="tableVariavels" layoutX="20.0" layoutY="406.0" prefHeight="200.0" prefWidth="200.0">
+              <columns>
+                <TableColumn prefWidth="184.0" text="C1" />
+              </columns>
+            </TableView>
          </children></AnchorPane>
   </content>
 </TitledPane>
