--- a/bin/application/Sample.fxml
+++ b/bin/application/Sample.fxml
@@ -9,92 +9,15 @@
 <?import javafx.scene.layout.*?>
 
 
-
-<TitledPane fx:id="TitledPanePrincipal" animated="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="714.0" prefWidth="1336.0" text="FrameWork" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SampleController">
-
-  <content>
-    <AnchorPane fx:id="AnchoPanePrincipal" minHeight="0.0" minWidth="0.0">
-         <children>
-            <TextArea fx:id="TextAreaRegras" layoutX="241.0" layoutY="35.0" prefHeight="578.0" prefWidth="310.0" />
-            <Label layoutX="330.0" layoutY="6.0" text="Insira as Regras" />
-            <Button fx:id="ButtonExecutarModelo" layoutX="421.0" layoutY="636.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="130.0" text="Executar Modelo" />
-            <Label layoutX="56.0" layoutY="6.0" text="Inserção de Variáveis" />
-            <Label layoutX="21.0" layoutY="115.0" text="Variável:" />
-            <TextField id="txtFieldUniversoNome" fx:id="txtFieldUniversoNome" layoutX="74.0" layoutY="111.0" prefHeight="25.0" prefWidth="135.0" />
-            <Label layoutX="21.0" layoutY="78.0" text="Universo:    de" />
-            <TextField id="txtFieldUniversoStart" fx:id="txtFieldUniversoStart" layoutX="100.0" layoutY="74.0" prefHeight="15.0" prefWidth="39.0" />
-            <Label layoutX="146.0" layoutY="78.0" text="até" />
-            <TextField id="txtFieldUniversoEnd" fx:id="txtFieldUniversoEnd" layoutX="170.0" layoutY="74.0" prefHeight="25.0" prefWidth="39.0" />
-            <TreeView layoutX="10.0" layoutY="175.0" prefHeight="171.0" prefWidth="219.0" />
-            <Label layoutX="82.0" layoutY="182.0" text="Inserir Termos" />
-            <CheckBox fx:id="CheckBoxVariavelObjetivo" layoutX="75.0" layoutY="143.0" mnemonicParsing="false" text="Objetiva" />
-            <Label layoutX="21.0" layoutY="208.0" text="Termo:" />
-            <Label layoutX="21.0" layoutY="244.0" text="Suporte:" />
-            <Label layoutX="21.0" layoutY="280.0" text="Nucleo:" />
-            <TextField fx:id="TextFieldTermos" layoutX="65.0" layoutY="204.0" />
-            <Label layoutX="74.0" layoutY="244.0" text="de" />
-            <Label layoutX="74.0" layoutY="280.0" text="de" />
-            <Label layoutX="138.0" layoutY="244.0" text="até" />
-            <Label layoutX="138.0" layoutY="280.0" text="até" />
-            <TextField fx:id="TextFieldInicioSuporte" layoutX="90.0" layoutY="240.0" prefHeight="25.0" prefWidth="43.0" />
-            <TextField fx:id="TextFieldFinalSuporte" layoutX="158.0" layoutY="240.0" prefHeight="25.0" prefWidth="43.0" />
-            <TextField fx:id="TextFieldInicioNucleo" layoutX="90.0" layoutY="276.0" prefHeight="25.0" prefWidth="43.0" />
-            <TextField fx:id="TextFieldFinalNucleo" layoutX="158.0" layoutY="276.0" prefHeight="25.0" prefWidth="43.0" />
-            <Button fx:id="ButtonInserirTermo" layoutX="94.0" layoutY="312.0" mnemonicParsing="false" text="Inserir" />
-            <Button layoutX="115.0" layoutY="357.0" mnemonicParsing="false" onAction="#inserirVariavel" prefHeight="25.0" prefWidth="111.0" text="Inserir Variável" />
-            <TitledPane fx:id="TitledPaneGrafico" alignment="CENTER" animated="false" collapsible="false" layoutX="568.0" layoutY="8.0" prefHeight="670.0" prefWidth="760.0" text="Gráficos" textAlignment="CENTER">
-              <content>
-                <AnchorPane fx:id="AnchorPaneGrafico" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                     <children>
-                        <ScrollPane layoutX="101.0" layoutY="118.0" prefHeight="695.0" prefWidth="695.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                          <content>
-                            <AnchorPane fx:id="AnchorPaneGraficoPrincipal" minHeight="0.0" minWidth="0.0" prefHeight="629.0" prefWidth="724.0">
-                                 <children>
-                                    <LineChart layoutX="14.0" layoutY="14.0" prefHeight="276.0" prefWidth="337.0">
-                                      <xAxis>
-                                        <CategoryAxis side="BOTTOM" />
-                                      </xAxis>
-                                      <yAxis>
-                                        <NumberAxis side="LEFT" />
-                                      </yAxis>
-                                    </LineChart>
-                                    <LineChart layoutX="373.0" layoutY="14.0" prefHeight="276.0" prefWidth="337.0">
-                                       <xAxis>
-                                          <CategoryAxis side="BOTTOM" />
-                                       </xAxis>
-                                       <yAxis>
-                                          <NumberAxis side="LEFT" />
-                                       </yAxis>
-                                    </LineChart>
-                                    <LineChart layoutX="25.0" layoutY="290.0" prefHeight="276.0" prefWidth="337.0">
-                                       <xAxis>
-                                          <CategoryAxis side="BOTTOM" />
-                                       </xAxis>
-                                       <yAxis>
-                                          <NumberAxis side="LEFT" />
-                                       </yAxis>
-                                    </LineChart>
-                                    <LineChart layoutX="373.0" layoutY="290.0" prefHeight="276.0" prefWidth="337.0">
-                                       <xAxis>
-                                          <CategoryAxis side="BOTTOM" />
-                                       </xAxis>
-                                       <yAxis>
-                                          <NumberAxis side="LEFT" />
-                                       </yAxis>
-                                    </LineChart>
-                                 </children>
-                              </AnchorPane>
-                          </content>
-                        </ScrollPane>
-                     </children>
-                  </AnchorPane>
-              </content>
-            </TitledPane>
-            <TableView fx:id="tableVariavels" layoutX="20.0" layoutY="406.0" prefHeight="200.0" prefWidth="200.0">
-              <columns>
-                <TableColumn prefWidth="184.0" text="C1" />
-              </columns>
-            </TableView>
-         </children></AnchorPane>
-  </content>
-</TitledPane>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SampleController">
+   <children>
+      <TextField fx:id="txtFieldUniversoNome" layoutX="14.0" layoutY="46.0" />
+      <TextField fx:id="txtFieldUniversoStart" layoutX="14.0" layoutY="109.0" prefHeight="25.0" prefWidth="52.0" />
+      <TextField fx:id="txtFieldUniversoEnd" layoutX="89.0" layoutY="109.0" prefHeight="25.0" prefWidth="52.0" />
+      <Label layoutX="14.0" layoutY="14.0" text="Variavel nome" />
+      <Label layoutX="14.0" layoutY="92.0" text="V, Start" />
+      <Label layoutX="89.0" layoutY="92.0" prefHeight="17.0" prefWidth="46.0" text="V. End" />
+      <CheckBox fx:id="chckBoxVariavelObjetiva" layoutX="174.0" layoutY="109.0" mnemonicParsing="false" text="Objectiva" />
+      <TreeView fx:id="tableVariavels" layoutX="12.0" layoutY="154.0" prefHeight="200.0" prefWidth="200.0" />
+   </children>
+</AnchorPane>
