--- a/src/application/Sample.fxml
+++ b/src/application/Sample.fxml
@@ -8,16 +8,28 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SampleController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SampleController">
    <children>
-      <TextField fx:id="txtFieldUniversoNome" layoutX="14.0" layoutY="46.0" />
-      <TextField fx:id="txtFieldUniversoStart" layoutX="14.0" layoutY="109.0" prefHeight="25.0" prefWidth="52.0" />
-      <TextField fx:id="txtFieldUniversoEnd" layoutX="89.0" layoutY="109.0" prefHeight="25.0" prefWidth="52.0" />
+      <TextField fx:id="txtFieldUniversoNome" layoutX="15.0" layoutY="37.0" />
+      <TextField fx:id="txtFieldUniversoStart" layoutX="10.0" layoutY="97.0" prefHeight="25.0" prefWidth="52.0" />
+      <TextField fx:id="txtFieldUniversoEnd" layoutX="76.0" layoutY="97.0" prefHeight="25.0" prefWidth="52.0" />
       <Label layoutX="14.0" layoutY="14.0" text="Variavel nome" />
-      <Label layoutX="14.0" layoutY="92.0" text="V, Start" />
-      <Label layoutX="89.0" layoutY="92.0" prefHeight="17.0" prefWidth="46.0" text="V. End" />
-      <CheckBox fx:id="chckBoxVariavelObjetiva" layoutX="174.0" layoutY="109.0" mnemonicParsing="false" text="Objectiva" />
-      <TreeView fx:id="arvore" layoutX="12.0" layoutY="154.0" prefHeight="200.0" prefWidth="200.0" />
+      <Label layoutX="16.0" layoutY="75.0" text="V, Start" />
+      <Label layoutX="79.0" layoutY="75.0" prefHeight="17.0" prefWidth="46.0" text="V. End" />
+      <CheckBox fx:id="chckBoxVariavelObjetiva" layoutX="17.0" layoutY="132.0" mnemonicParsing="false" text="Objectiva" />
+      <TreeView fx:id="tableVariavels" layoutX="25.0" layoutY="277.0" onMouseReleased="#editingTree" prefHeight="200.0" prefWidth="200.0" />
+      <Button fx:id="btnInserirVariavel" layoutX="15.0" layoutY="158.0" mnemonicParsing="false" onAction="#inserirVariavel" text="Inserir Variavel" />
+      <Separator layoutX="185.0" layoutY="10.0" orientation="VERTICAL" prefHeight="242.0" prefWidth="11.0" />
+      <TextField fx:id="txtFieldTermoNucleoInicio" layoutX="234.0" layoutY="101.0" prefHeight="25.0" prefWidth="52.0" />
+      <TextField fx:id="txtFieldTermoNucleoFim" layoutX="320.0" layoutY="101.0" prefHeight="25.0" prefWidth="52.0" />
+      <TextField fx:id="txtFieldTermoSuporteFim" layoutX="320.0" layoutY="160.0" prefHeight="25.0" prefWidth="52.0" />
+      <TextField fx:id="txtFieldTermoSuporteInicio" layoutX="234.0" layoutY="160.0" prefHeight="25.0" prefWidth="52.0" />
+      <TextField fx:id="txtFieldTermoNome" layoutX="233.0" layoutY="37.0" />
+      <Label layoutX="235.0" layoutY="14.0" text="Nome termo" />
+      <Label layoutX="234.0" layoutY="79.0" text="N. Start" />
+      <Label layoutX="320.0" layoutY="79.0" text="N. End" />
+      <Label layoutX="320.0" layoutY="137.0" text="S. End" />
+      <Label layoutX="234.0" layoutY="137.0" text="S. Start" />
+      <Button fx:id="btnInserirTermo" layoutX="233.0" layoutY="198.0" mnemonicParsing="false" onAction="#inserirTermo" text="inserir Termo" />
    </children>
 </AnchorPane>
