--- a/src/application/Sample.fxml
+++ b/src/application/Sample.fxml
@@ -9,44 +9,49 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SampleController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1271.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SampleController">
    <children>
-      <TreeView layoutX="7.0" layoutY="5.0" prefHeight="282.0" prefWidth="275.0" />
-      <TextField fx:id="txtFieldUniversoStart" layoutX="27.0" layoutY="648.0" prefHeight="25.0" prefWidth="52.0" />
-      <TextField fx:id="txtFieldUniversoEnd" layoutX="106.0" layoutY="648.0" prefHeight="25.0" prefWidth="52.0" />
-      <Label layoutX="14.0" layoutY="14.0" text="Variavel nome" />
-      <Label layoutX="27.0" layoutY="631.0" text="U. Start" />
-      <Label layoutX="105.0" layoutY="631.0" prefHeight="17.0" prefWidth="46.0" text="U. End" />
-      <CheckBox fx:id="chckBoxVariavelObjetiva" layoutX="38.0" layoutY="120.0" mnemonicParsing="false" onMouseClicked="#desabilitarValorVariavel" text="Objetiva" />
-      <Button fx:id="btnInserirVariavel" layoutX="24.0" layoutY="179.0" mnemonicParsing="false" onAction="#inserirVariavel" text="Inserir Variavel" />
-      <TextField fx:id="txtFieldTermoNucleoInicio" layoutX="157.0" layoutY="85.0" prefHeight="25.0" prefWidth="52.0" />
-      <TextField fx:id="txtFieldTermoNucleoFim" layoutX="220.0" layoutY="85.0" prefHeight="25.0" prefWidth="52.0" />
-      <TextField fx:id="txtFieldTermoSuporteFim" layoutX="220.0" layoutY="138.0" prefHeight="25.0" prefWidth="52.0" />
-      <TextField fx:id="txtFieldTermoSuporteInicio" layoutX="157.0" layoutY="138.0" prefHeight="25.0" prefWidth="52.0" />
-      <TextField fx:id="txtFieldTermoNome" layoutX="152.0" layoutY="37.0" prefHeight="25.0" prefWidth="114.0" />
-      <Label layoutX="162.0" layoutY="14.0" text="Nome termo" />
-      <Label layoutX="157.0" layoutY="67.0" text="N. Start" />
-      <Label layoutX="220.0" layoutY="67.0" text="N. End" />
-      <Label layoutX="221.0" layoutY="120.0" text="S. End" />
-      <Label layoutX="158.0" layoutY="120.0" text="S. Start" />
-      <Button fx:id="btnInserirTermo" layoutX="166.0" layoutY="179.0" mnemonicParsing="false" onAction="#inserirTermo" text="Inserir Termo" />
-      <Button fx:id="btnEditarVariavel" layoutX="25.0" layoutY="211.0" mnemonicParsing="false" onAction="#editarVariavel" text="Editar Variavel" />
-      <Button fx:id="btnExcluirVariavel" layoutX="24.0" layoutY="246.0" mnemonicParsing="false" onAction="#excluirVariavel" text="Excluir Variavel" />
-      <Button fx:id="btnEditarTermo" layoutX="167.0" layoutY="211.0" mnemonicParsing="false" onAction="#editarTermo" text="Editar Termo" />
-      <Button fx:id="btnExcluirTermo" layoutX="165.0" layoutY="246.0" mnemonicParsing="false" onAction="#exlcuirTermo" text="Excluir Termo" />
-      <TextArea fx:id="areaRegras" layoutX="10.0" layoutY="333.0" prefHeight="148.0" prefWidth="1180.0" />
-      <TreeView fx:id="tableVariavels" layoutX="282.0" layoutY="5.0" onMouseReleased="#editingTree" prefHeight="282.0" prefWidth="904.0" />
-      <Separator layoutX="138.0" layoutY="11.0" orientation="VERTICAL" prefHeight="276.0" prefWidth="13.0" />
-      <TextField fx:id="txtFieldUniversoNome" layoutX="14.0" layoutY="37.0" prefHeight="25.0" prefWidth="114.0" />
-      <Separator layoutX="7.0" layoutY="303.0" prefHeight="11.0" prefWidth="540.0" />
-      <Separator layoutX="591.0" layoutY="303.0" prefHeight="11.0" prefWidth="588.0" />
-      <Label layoutX="552.0" layoutY="300.0" text="Regras" />
-      <TextField fx:id="txtFieldUniversoValue" layoutX="57.0" layoutY="151.0" prefHeight="25.0" prefWidth="52.0" />
-      <Label layoutX="22.0" layoutY="155.0" text="Valor:" />
-      <Button fx:id="btnPadrao" layoutX="1029.0" layoutY="724.0" mnemonicParsing="false" onAction="#preenchePadrao" text="Preenche Padrão" />
-      <Button fx:id="btnAplicarRegras" layoutX="11.0" layoutY="489.0" mnemonicParsing="false" onAction="#capturaRegras" text="Aplicar Regras" />
-      <Button fx:id="btnSetaUniverso" layoutX="26.0" layoutY="680.0" mnemonicParsing="false" onAction="#setaUniverso" text="Set Universo" />
-      <TitledPane animated="false" expanded="false" layoutX="636.0" layoutY="296.0" prefHeight="74.0" prefWidth="546.0" text="Regras">
+      <TreeView layoutX="619.0" layoutY="693.0" prefHeight="89.0" prefWidth="200.0" />
+      <TreeView layoutX="413.0" layoutY="692.0" prefHeight="89.0" prefWidth="200.0" />
+      <TreeView layoutX="599.0" prefHeight="230.0" prefWidth="672.0" />
+      <TreeView prefHeight="230.0" prefWidth="400.0" />
+      <TreeView layoutX="399.0" layoutY="115.0" prefHeight="115.0" prefWidth="200.0" />
+      <TreeView layoutX="399.0" prefHeight="115.0" prefWidth="200.0" />
+      <TextField fx:id="txtFieldUniversoStart" layoutX="413.0" layoutY="161.0" prefHeight="25.0" prefWidth="52.0" />
+      <TextField fx:id="txtFieldUniversoEnd" layoutX="534.0" layoutY="161.0" prefHeight="25.0" prefWidth="52.0" />
+      <Label layoutX="18.0" layoutY="50.0" text="Nome" />
+      <Label layoutX="425.0" layoutY="143.0" text="Inicio" />
+      <Label layoutX="548.0" layoutY="143.0" prefHeight="17.0" prefWidth="21.0" text="Fim" />
+      <CheckBox fx:id="chckBoxVariavelObjetiva" layoutX="51.0" layoutY="104.0" mnemonicParsing="false" onMouseClicked="#desabilitarValorVariavel" text="Objetiva" />
+      <Button fx:id="btnInserirVariavel" layoutX="7.0" layoutY="190.0" mnemonicParsing="false" onAction="#inserirVariavel" text="Inserir" />
+      <TextField fx:id="txtFieldTermoNucleoInicio" layoutX="233.0" layoutY="103.0" prefHeight="25.0" prefWidth="52.0" />
+      <TextField fx:id="txtFieldTermoNucleoFim" layoutX="319.0" layoutY="103.0" prefHeight="25.0" prefWidth="52.0" />
+      <TextField fx:id="txtFieldTermoSuporteFim" layoutX="318.0" layoutY="152.0" prefHeight="25.0" prefWidth="52.0" />
+      <TextField fx:id="txtFieldTermoSuporteInicio" layoutX="232.0" layoutY="152.0" prefHeight="25.0" prefWidth="52.0" />
+      <TextField fx:id="txtFieldTermoNome" layoutX="242.0" layoutY="46.0" prefHeight="25.0" prefWidth="131.0" />
+      <Label layoutX="200.0" layoutY="50.0" text="Nome" />
+      <Label layoutX="200.0" layoutY="107.0" text="Inicio" />
+      <Label layoutX="290.0" layoutY="107.0" text="Fim" />
+      <Label layoutX="289.0" layoutY="156.0" text="Fim" />
+      <Label layoutX="200.0" layoutY="156.0" text="Inicio" />
+      <Button fx:id="btnInserirTermo" layoutX="216.0" layoutY="190.0" mnemonicParsing="false" onAction="#inserirTermo" text="Inserir" />
+      <Button fx:id="btnEditarVariavel" layoutX="65.0" layoutY="190.0" mnemonicParsing="false" onAction="#editarVariavel" text="Editar" />
+      <Button fx:id="btnExcluirVariavel" layoutX="119.0" layoutY="190.0" mnemonicParsing="false" onAction="#excluirVariavel" text="Excluir" />
+      <Button fx:id="btnEditarTermo" layoutX="275.0" layoutY="190.0" mnemonicParsing="false" onAction="#editarTermo" text="Editar" />
+      <Button fx:id="btnExcluirTermo" layoutX="333.0" layoutY="190.0" mnemonicParsing="false" onAction="#exlcuirTermo" text="Excluir" />
+      <TextArea fx:id="areaRegras" layoutX="606.0" layoutY="42.0" prefHeight="148.0" prefWidth="658.0" />
+      <TreeView fx:id="tableVariavels" layoutX="9.0" layoutY="241.0" onMouseReleased="#editingTree" prefHeight="444.0" prefWidth="1254.0" />
+      <TextField fx:id="txtFieldUniversoNome" layoutX="56.0" layoutY="46.0" prefHeight="25.0" prefWidth="114.0" />
+      <Label layoutX="805.0" layoutY="11.0" prefHeight="25.0" prefWidth="42.0" text="Regras">
+         <font>
+            <Font size="14.0" />
+         </font></Label>
+      <TextField fx:id="txtFieldUniversoValue" layoutX="50.0" layoutY="152.0" prefHeight="25.0" prefWidth="114.0" />
+      <Label layoutX="14.0" layoutY="156.0" prefHeight="17.0" prefWidth="36.0" text="Valor:" />
+      <Button fx:id="btnPadrao" layoutX="684.0" layoutY="738.0" mnemonicParsing="false" onAction="#preenchePadrao" text="Preencher" />
+      <Button fx:id="btnAplicarRegras" layoutX="859.0" layoutY="196.0" mnemonicParsing="false" onAction="#capturaRegras" text="Aplicar" />
+      <Button fx:id="btnSetaUniverso" layoutX="473.0" layoutY="196.0" mnemonicParsing="false" onAction="#setaUniverso" text="Definir" />
+      <TitledPane animated="false" expanded="false" layoutX="857.0" layoutY="12.0" prefHeight="74.0" prefWidth="406.0" text="Regras">
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
@@ -63,7 +68,46 @@
             </AnchorPane>
         </content>
       </TitledPane>
-      <Label layoutX="568.0" layoutY="610.0" prefHeight="17.0" prefWidth="46.0" text="Defuzzy" />
-      <TextField fx:id="txtFieldDeFuzzy" editable="false" layoutX="620.0" layoutY="606.0" prefHeight="25.0" prefWidth="114.0" />
+      <TextField fx:id="txtFieldDeFuzzy" editable="false" layoutX="456.0" layoutY="738.0" prefHeight="25.0" prefWidth="114.0" />
+      <Label layoutX="415.0" layoutY="45.0" text="Variável: " />
+      <TextField fx:id="txtFieldVariavelSelecionada" editable="false" layoutX="463.0" layoutY="41.0" prefHeight="25.0" prefWidth="114.0" />
+      <TextField fx:id="txtFieldTermoSelecionado" editable="false" layoutX="462.0" layoutY="78.0" prefHeight="25.0" prefWidth="114.0" />
+      <Label layoutX="419.0" layoutY="82.0" prefHeight="17.0" prefWidth="42.0" text="Termo: " />
+      <Label layoutX="60.0" layoutY="21.0" text="Variaveis">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="277.0" layoutY="21.0" text="Termos">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="268.0" layoutY="82.0" text="Núcleo" />
+      <Label layoutX="269.0" layoutY="131.0" text="Suporte" />
+      <Label layoutX="51.0" layoutY="82.0" prefHeight="17.0" prefWidth="66.0" text="É Objetiva?" />
+      <Label layoutX="49.0" layoutY="131.0" text="Contém Valor?" />
+      <Label layoutX="427.0" layoutY="11.0" text="Selecionados da árvore">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="472.0" layoutY="121.0" text="Universo">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Separator layoutX="175.0" orientation="VERTICAL" prefHeight="230.0" prefWidth="21.0" />
+      <Separator layoutX="621.0" layoutY="18.0" prefHeight="11.0" prefWidth="173.0" />
+      <Label layoutX="482.0" layoutY="699.0" text="Resultado">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="669.0" layoutY="699.0" text="Exemplo Padrao">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
